solution1/csim/report/fir_filter_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../fir_test.cpp in debug mode
csim.mk:74: recipe for target 'obj/fir_test.o' failed
In file included from C:/Xilinx/Vivado/2019.2/include/floating_point_v7_0_bitacc_cmodel.h:143:0,
                 from C:/Xilinx/Vivado/2019.2/include/hls_fpo.h:186,
                 from C:/Xilinx/Vivado/2019.2/include/hls_half.h:44,
                 from C:/Xilinx/Vivado/2019.2/include/etc/ap_private.h:90,
                 from C:/Xilinx/Vivado/2019.2/include/ap_common.h:641,
                 from C:/Xilinx/Vivado/2019.2/include/ap_int.h:54,
                 from C:/Xilinx/Vivado/2019.2/include/ap_axi_sdata.h:86,
                 from ../../../fir_filter.h:3,
                 from ../../../fir_test.cpp:4:
C:/Xilinx/Vivado/2019.2/include/gmp.h:62:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vivado/2019.2/include/hls_fpo.h:186:0,
                 from C:/Xilinx/Vivado/2019.2/include/hls_half.h:44,
                 from C:/Xilinx/Vivado/2019.2/include/etc/ap_private.h:90,
                 from C:/Xilinx/Vivado/2019.2/include/ap_common.h:641,
                 from C:/Xilinx/Vivado/2019.2/include/ap_int.h:54,
                 from C:/Xilinx/Vivado/2019.2/include/ap_axi_sdata.h:86,
                 from ../../../fir_filter.h:3,
                 from ../../../fir_test.cpp:4:
C:/Xilinx/Vivado/2019.2/include/floating_point_v7_0_bitacc_cmodel.h:135:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../fir_test.cpp: In function 'int main()':
../../../fir_test.cpp:15:56: error: 'fir_filter' was not declared in this scope
         fir_filter(&samples_In[i*2],&samples_Out[i*2+1]);
                                                        ^
make: *** [obj/fir_test.o] Error 1
ERR: [SIM 100] CSim file generation failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
